LOTS of little visual improvements across type, float, clear examples

--- a/src/pages/docs/font-family.mdx
+++ b/src/pages/docs/font-family.mdx
@@ -20,7 +20,7 @@ Use `font-sans` to apply a web safe sans-serif font family:
 
 ```html lightBlue
 <template preview>
-  <p class="font-sans text-xl text-light-blue-600 text-center md:text-2xl">
+  <p class="font-sans text-xl text-light-blue-600 text-center">
     The quick brown fox jumps over the lazy dog.
   </p>
 </template>
@@ -36,7 +36,7 @@ Use `font-serif` to apply a web safe serif font family:
 
 ```html emerald
 <template preview>
-  <p class="font-serif text-xl text-emerald-600 text-center md:text-2xl">
+  <p class="font-serif text-xl text-emerald-600 text-center">
     The quick brown fox jumps over the lazy dog.
   </p>
 </template>
@@ -52,7 +52,7 @@ Use `font-mono` to apply a web safe monospaced font family:
 
 ```html indigo
 <template preview>
-  <p class="font-mono text-xl text-indigo-600 text-center md:text-2xl">
+  <p class="font-mono text-xl text-indigo-600 text-center">
     The quick brown fox jumps over the lazy dog.
   </p>
 </template>
