--- a/src/pages/docs/list-style-position.mdx
+++ b/src/pages/docs/list-style-position.mdx
@@ -22,7 +22,7 @@ Control the position of the markers in a list using the `list-inside` and `list-
 <template preview class="p-4 px-8">
   <div class="mb-6">
     <p class="mb-1 text-sm text-light-blue-600">.list-inside</p>
-    <ul class="list-disc list-inside bg-light-blue-200 bg-stripes bg-stripes-white text-gray-600 py-2 rounded-md">
+    <ul class="list-disc list-inside bg-light-blue-200 bg-stripes bg-stripes-white text-light-blue-600 py-2 rounded-md">
       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
       <li>Assumenda, quia temporibus eveniet a libero incidunt suscipit</li>
       <li>Quidem, ipsam illum quis sed voluptatum quae eum fugit earum</li>
@@ -31,7 +31,7 @@ Control the position of the markers in a list using the `list-inside` and `list-
   </div>
   <div class="mb-6">
     <p class="mb-1 text-sm text-light-blue-600">.list-outside</p>
-    <ul class="list-disc list-outside bg-light-blue-200 bg-stripes bg-stripes-white text-gray-600 py-2 rounded-md">
+    <ul class="list-disc list-outside bg-light-blue-200 bg-stripes bg-stripes-white text-light-blue-600 py-2 rounded-md">
       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
       <li>Assumenda, quia temporibus eveniet a libero incidunt suscipit</li>
       <li>Quidem, ipsam illum quis sed voluptatum quae eum fugit earum</li>
