--- a/src/pages/docs/list-style-type.mdx
+++ b/src/pages/docs/list-style-type.mdx
@@ -20,25 +20,25 @@ To create bulleted or numeric lists, use the `list-disc` and `list-decimal` util
 
 ```html purple
 <template preview>
-  <div class="mb-6">
-    <p class="mb-1 text-sm text-purple-600">.list-disc</p>
-    <ul class="list-disc list-inside">
+  <div class="mb-6 space-y-2">
+    <p class="text-sm text-purple-600">.list-disc</p>
+    <ul class="list-disc list-inside text-purple-800">
       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
       <li>Assumenda, quia temporibus eveniet a libero incidunt suscipit</li>
       <li>Quidem, ipsam illum quis sed voluptatum quae eum fugit earum</li>
     </ul>
   </div>
-  <div class="mb-6">
-    <p class="mb-1 text-sm text-purple-600">.list-decimal</p>
-    <ol class="list-decimal list-inside">
+  <div class="mb-6 space-y-2">
+    <p class="text-sm text-purple-600">.list-decimal</p>
+    <ol class="list-decimal list-inside text-purple-800">
       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
       <li>Assumenda, quia temporibus eveniet a libero incidunt suscipit</li>
       <li>Quidem, ipsam illum quis sed voluptatum quae eum fugit earum</li>
     </ol>
   </div>
-  <div>
-    <p class="mb-1 text-sm text-purple-600">.list-none (default)</p>
-    <ul class="default">
+  <div class="space-y-2">
+    <p class="text-sm text-purple-600">.list-none (default)</p>
+    <ul class="default text-purple-800">
       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
       <li>Assumenda, quia temporibus eveniet a libero incidunt suscipit</li>
       <li>Quidem, ipsam illum quis sed voluptatum quae eum fugit earum</li>
