--- a/src/pages/docs/object-fit.mdx
+++ b/src/pages/docs/object-fit.mdx
@@ -16,7 +16,7 @@ Resize an element's content to stay contained within its container using `.objec
 ```html rose
 <template preview>
   <div class="bg-rose-300 bg-stripes bg-stripes-white rounded-md overflow-hidden">
-    <img class="h-48 w-full object-contain" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80" alt="">
+    <img class="h-48 w-full object-contain" src="/img/placeholder-rose.svg" alt="">
   </div>
 </template>
 
@@ -32,7 +32,7 @@ Resize an element's content to cover its container using `.object-cover`.
 ```html indigo
 <template preview>
   <div class="bg-indigo-300 bg-stripes bg-stripes-white rounded-md overflow-hidden">
-    <img class="h-48 w-full object-cover" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80" alt="">
+    <img class="h-48 w-full object-cover" src="/img/placeholder-indigo.svg" alt="">
   </div>
 </template>
 
@@ -48,7 +48,7 @@ Stretch an element's content to fit its container using `.object-fill`.
 ```html lightBlue
 <template preview>
   <div class="bg-light-blue-300 bg-stripes bg-stripes-white rounded-md overflow-hidden">
-    <img class="h-48 w-full object-fill" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80" alt="">
+    <img class="h-48 w-full object-fill" src="/img/placeholder-light-blue.svg" alt="">
   </div>
 </template>
 
@@ -64,7 +64,7 @@ Display an element's content at its original size ignoring the container size us
 ```html amber
 <template preview>
   <div class="bg-amber-300 bg-stripes bg-stripes-white rounded-md overflow-hidden">
-    <img class="h-48 w-full object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80" alt="">
+    <img class="h-48 w-full object-none" src="/img/placeholder-amber.svg" alt="">
   </div>
 </template>
 
@@ -80,7 +80,7 @@ Display an element's content at its original size but scale it down to fit its c
 ```html emerald
 <template preview>
   <div class="bg-emerald-300 bg-stripes bg-stripes-white rounded-md overflow-hidden">
-    <img class="h-48 w-full object-scale-down" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=128&q=80" alt="">
+    <img class="h-48 w-full object-scale-down" src="/img/placeholder-emerald.svg" alt="">
   </div>
 </template>
 
