--- a/src/pages/docs/placeholder-opacity.mdx
+++ b/src/pages/docs/placeholder-opacity.mdx
@@ -16,23 +16,23 @@ export const classes = {
 
 Control the opacity of an element's placeholder color using the `placeholder-opacity-{amount}` utilities.
 
-```html
+```html fuchsia
 <template preview>
   <div class="space-y-4">
     <div class="max-w-xs">
-      <input class="block appearance-none placeholder-gray-500 placeholder-opacity-100 border rounded-md w-full py-3 px-4 text-gray-700 leading-5 focus:outline-none focus:shadow-outline" placeholder="jane@example.com">
+      <input class="block appearance-none placeholder-gray-500 placeholder-opacity-100 border border-fuchsia-300 rounded-md w-full py-3 px-4 text-gray-700 leading-5 focus:outline-none focus:ring-2 focus:border-fuchsia-400 focus:ring-fuchsia-200" placeholder="jane@example.com">
     </div>
     <div class="max-w-xs">
-      <input class="block appearance-none placeholder-gray-500 placeholder-opacity-75 border rounded-md w-full py-3 px-4 text-gray-700 leading-5 focus:outline-none focus:shadow-outline" placeholder="jane@example.com">
+      <input class="block appearance-none placeholder-gray-500 placeholder-opacity-75 border border-fuchsia-300 rounded-md w-full py-3 px-4 text-gray-700 leading-5 focus:outline-none focus:ring-2 focus:border-fuchsia-400 focus:ring-fuchsia-200" placeholder="jane@example.com">
     </div>
     <div class="max-w-xs">
-      <input class="block appearance-none placeholder-gray-500 placeholder-opacity-50 border rounded-md w-full py-3 px-4 text-gray-700 leading-5 focus:outline-none focus:shadow-outline" placeholder="jane@example.com">
+      <input class="block appearance-none placeholder-gray-500 placeholder-opacity-50 border border-fuchsia-300 rounded-md w-full py-3 px-4 text-gray-700 leading-5 focus:outline-none focus:ring-2 focus:border-fuchsia-400 focus:ring-fuchsia-200" placeholder="jane@example.com">
     </div>
     <div class="max-w-xs">
-      <input class="block appearance-none placeholder-gray-500 placeholder-opacity-25 border rounded-md w-full py-3 px-4 text-gray-700 leading-5 focus:outline-none focus:shadow-outline" placeholder="jane@example.com">
+      <input class="block appearance-none placeholder-gray-500 placeholder-opacity-25 border border-fuchsia-300 rounded-md w-full py-3 px-4 text-gray-700 leading-5 focus:outline-none focus:ring-2 focus:border-fuchsia-400 focus:ring-fuchsia-200" placeholder="jane@example.com">
     </div>
     <div class="max-w-xs">
-      <input class="block appearance-none placeholder-gray-500 placeholder-opacity-0 border rounded-md w-full py-3 px-4 text-gray-700 leading-5 focus:outline-none focus:shadow-outline" placeholder="jane@example.com">
+      <input class="block appearance-none placeholder-gray-500 placeholder-opacity-0 border border-fuchsia-300 rounded-md w-full py-3 px-4 text-gray-700 leading-5 focus:outline-none focus:ring-2 focus:border-fuchsia-400 focus:ring-fuchsia-200" placeholder="jane@example.com">
     </div>
   </div>
 </template>
