--- a/src/pages/docs/whitespace.mdx
+++ b/src/pages/docs/whitespace.mdx
@@ -15,8 +15,8 @@ Use `whitespace-normal` to cause text to wrap normally within an element. Newlin
 
 ```html indigo
 <template preview>
-  <div class="w-3/4 p-6 bg-indigo-300 rounded-md shadow-inner">
-    <div class="whitespace-normal font-flow text-indigo-600 text-3xl leading-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quidem itaque beatae, rem tenetur quia iure,
+  <div class="w-3/4 px-6 py-4 bg-indigo-200 rounded-lg">
+    <div class="whitespace-normal font-flow text-indigo-500 text-3xl leading-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quidem itaque beatae, rem tenetur quia iure,
       eum natus enim maxime
       laudantium quibusdam illo nihil,
 
@@ -39,8 +39,8 @@ Use `whitespace-nowrap` to prevent text from wrapping within an element. Newline
 
 ```html emerald
 <template preview>
-  <div class="w-3/4 p-6 bg-emerald-300 rounded-md shadow-inner overflow-x-auto">
-    <div class="whitespace-nowrap font-flow text-emerald-600 text-3xl leading-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quidem itaque beatae, rem tenetur quia iure,
+  <div class="w-3/4 px-6 py-4 bg-emerald-200 rounded-lg overflow-x-auto">
+    <div class="whitespace-nowrap font-flow text-emerald-500 text-3xl leading-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quidem itaque beatae, rem tenetur quia iure,
       eum natus enim maxime
       laudantium quibusdam illo nihil,
 
@@ -63,8 +63,8 @@ Use `whitespace-pre` to preserve newlines and spaces within an element. Text wil
 
 ```html amber
 <template preview>
-  <div class="w-3/4 p-6 bg-amber-300 rounded-md shadow-inner overflow-x-auto">
-    <div class="whitespace-pre font-flow text-amber-600 text-3xl leading-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quidem itaque beatae, rem tenetur quia iure,
+  <div class="w-3/4 px-6 py-4 bg-amber-200 rounded-lg overflow-x-auto">
+    <div class="whitespace-pre font-flow text-amber-500 text-3xl leading-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quidem itaque beatae, rem tenetur quia iure,
       eum natus enim maxime
       laudantium quibusdam illo nihil,
 
@@ -87,8 +87,8 @@ Use `whitespace-pre-line` to preserve newlines but not spaces within an element.
 
 ```html lightBlue
 <template preview>
-  <div class="w-3/4 p-6 bg-light-blue-300 rounded-md shadow-inner">
-    <div class="whitespace-pre-line font-flow text-light-blue-600 text-3xl leading-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quidem itaque beatae, rem tenetur quia iure,
+  <div class="w-3/4 px-6 py-4 bg-light-blue-200 rounded-lg">
+    <div class="whitespace-pre-line font-flow text-light-blue-500 text-3xl leading-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quidem itaque beatae, rem tenetur quia iure,
       eum natus enim maxime
       laudantium quibusdam illo nihil,
 
@@ -110,8 +110,8 @@ Use `whitespace-pre-wrap` to preserve newlines and spaces within an element. Tex
 
 ```html rose
 <template preview>
-  <div class="w-3/4 p-6 bg-rose-300 rounded-md shadow-inner">
-    <div class="whitespace-pre-wrap font-flow text-rose-600 text-3xl leading-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quidem itaque beatae, rem tenetur quia iure,
+  <div class="w-3/4 px-6 py-4 bg-rose-200 rounded-lg">
+    <div class="whitespace-pre-wrap font-flow text-rose-500 text-3xl leading-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quidem itaque beatae, rem tenetur quia iure,
       eum natus enim maxime
       laudantium quibusdam illo nihil,
 
