--- a/src/pages/docs/font-style.mdx
+++ b/src/pages/docs/font-style.mdx
@@ -20,7 +20,7 @@ Use the `italic` utility to make text italic.
 
 ```html emerald
 <template preview>
-  <p class="italic text-xl text-emerald-600 lg:text-2xl">The quick brown fox jumped over the lazy dog.</p>
+  <p class="italic text-xl text-emerald-800">The quick brown fox jumped over the lazy dog.</p>
 </template>
 
 <p class="**italic** ...">The quick brown fox ...</p>
@@ -32,7 +32,7 @@ Use the `not-italic` utility to display text normally. This is typically used to
 
 ```html amber
 <template preview>
-  <p class="not-italic text-xl text-amber-600 lg:text-2xl">The quick brown fox jumped over the lazy dog.</p>
+  <p class="not-italic text-xl text-amber-800">The quick brown fox jumped over the lazy dog.</p>
 </template>
 
 <p class="**not-italic** ...">The quick brown fox ...</p>
