--- a/src/pages/docs/font-weight.mdx
+++ b/src/pages/docs/font-weight.mdx
@@ -23,39 +23,39 @@ Control the font weight of an element using the `font-{weight}` utilities.
   <dl class="text-light-blue-600 space-y-6">
     <div class="flex items-start">
       <dt class="w-32 text-right pr-6 flex-shrink-0 text-sm text-light-blue-600 text-opacity-50 font-mono leading-7">thin</dt>
-      <dd class="text-xl font-thin lg:text-2xl">The quick brown fox jumped over the lazy dog.</dd>
+      <dd class="text-xl font-thin">The quick brown fox jumped over the lazy dog.</dd>
     </div>
     <div class="flex items-start">
       <dt class="w-32 text-right pr-6 flex-shrink-0 text-sm text-light-blue-600 text-opacity-50 font-mono leading-7">extralight</dt>
-      <dd class="text-xl font-extralight lg:text-2xl">The quick brown fox jumped over the lazy dog.</dd>
+      <dd class="text-xl font-extralight">The quick brown fox jumped over the lazy dog.</dd>
     </div>
     <div class="flex items-start">
       <dt class="w-32 text-right pr-6 flex-shrink-0 text-sm text-light-blue-600 text-opacity-50 font-mono leading-7">light</dt>
-      <dd class="text-xl font-light lg:text-2xl">The quick brown fox jumped over the lazy dog.</dd>
+      <dd class="text-xl font-light">The quick brown fox jumped over the lazy dog.</dd>
     </div>
     <div class="flex items-start">
       <dt class="w-32 text-right pr-6 flex-shrink-0 text-sm text-light-blue-600 text-opacity-50 font-mono leading-7">normal</dt>
-      <dd class="text-xl font-normal lg:text-2xl">The quick brown fox jumped over the lazy dog.</dd>
+      <dd class="text-xl font-normal">The quick brown fox jumped over the lazy dog.</dd>
     </div>
     <div class="flex items-start">
       <dt class="w-32 text-right pr-6 flex-shrink-0 text-sm text-light-blue-600 text-opacity-50 font-mono leading-7">medium</dt>
-      <dd class="text-xl font-medium lg:text-2xl">The quick brown fox jumped over the lazy dog.</dd>
+      <dd class="text-xl font-medium">The quick brown fox jumped over the lazy dog.</dd>
     </div>
     <div class="flex items-start">
       <dt class="w-32 text-right pr-6 flex-shrink-0 text-sm text-light-blue-600 text-opacity-50 font-mono leading-7">semibold</dt>
-      <dd class="text-xl font-semibold lg:text-2xl">The quick brown fox jumped over the lazy dog.</dd>
+      <dd class="text-xl font-semibold">The quick brown fox jumped over the lazy dog.</dd>
     </div>
     <div class="flex items-start">
       <dt class="w-32 text-right pr-6 flex-shrink-0 text-sm text-light-blue-600 text-opacity-50 font-mono leading-7">bold</dt>
-      <dd class="text-xl font-bold lg:text-2xl">The quick brown fox jumped over the lazy dog.</dd>
+      <dd class="text-xl font-bold">The quick brown fox jumped over the lazy dog.</dd>
     </div>
     <div class="flex items-start">
       <dt class="w-32 text-right pr-6 flex-shrink-0 text-sm text-light-blue-600 text-opacity-50 font-mono leading-7">extrabold</dt>
-      <dd class="text-xl font-extrabold lg:text-2xl">The quick brown fox jumped over the lazy dog.</dd>
+      <dd class="text-xl font-extrabold">The quick brown fox jumped over the lazy dog.</dd>
     </div>
     <div class="flex items-start">
       <dt class="w-32 text-right pr-6 flex-shrink-0 text-sm text-light-blue-600 text-opacity-50 font-mono leading-7">black</dt>
-      <dd class="text-xl font-black lg:text-2xl">The quick brown fox jumped over the lazy dog.</dd>
+      <dd class="text-xl font-black">The quick brown fox jumped over the lazy dog.</dd>
     </div>
   </dl> 
 </template>
