--- a/src/pages/docs/text-decoration.mdx
+++ b/src/pages/docs/text-decoration.mdx
@@ -20,7 +20,7 @@ Use the `underline` utility to underline text.
 
 ```html fuchsia
 <template preview>
-  <p class="underline text-xl text-fuchsia-600 lg:text-2xl">The quick brown fox jumped over the lazy dog.</p>
+  <p class="underline text-xl text-fuchsia-600">The quick brown fox jumped over the lazy dog.</p>
 </template>
 
 <p class="**underline** ...">The quick brown fox ...</p>
@@ -32,7 +32,7 @@ Use the `line-through` utility to strike out text.
 
 ```html rose
 <template preview>
-  <p class="line-through text-xl text-rose-600 lg:text-2xl">The quick brown fox jumped over the lazy dog.</p>
+  <p class="line-through text-xl text-rose-600">The quick brown fox jumped over the lazy dog.</p>
 </template>
 
 <p class="**line-through** ...">The quick brown fox ...</p>
@@ -45,7 +45,7 @@ Use the `no-underline` utility to remove underline or line-through styling.
 ```html purple
 <template preview>
   <div class="text-center">
-    <a href="#" class="no-underline text-purple-600 text-xl lg:text-2xl">Link with no underline</a>
+    <a href="#" class="no-underline text-purple-600 text-xl">Link with no underline</a>
   </div>
 </template>
 
@@ -70,7 +70,7 @@ To control the text decoration of an element on hover, add the `hover:` prefix t
 
 ```html indigo	
 <template preview class="text-center p-4">	
-  <a href="#hover" class="no-underline hover:underline text-indigo-600 text-xl lg:text-2xl">Link</a>	
+  <a href="#hover" class="no-underline hover:underline text-indigo-600 text-xl">Link</a>	
 </template>	
 <a href="#" class="no-underline **hover:underline** ...">Link</a>	
 ```	
