box shadow and background color/repeat tweaks

--- a/src/pages/docs/background-repeat.mdx
+++ b/src/pages/docs/background-repeat.mdx
@@ -18,52 +18,52 @@ export const classes = { plugin }
 
 Use `bg-repeat` to repeat the background image both vertically and horizontally.
 
-```html
+```html fuchsia
 <template preview>
-  <div class="w-full bg-gray-400 h-48 bg-center bg-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=128&q=80');">
+  <div class="w-full bg-fuchsia-300 h-48 bg-center bg-repeat" style="background-image:url('/img/placeholder-light-blue.svg');">
   </div>
 </template>
 
-<div class="bg-repeat bg-center ..." style="background-image: url(...)"></div>
+<div class="**bg-repeat** bg-center ..." style="background-image: url(...)"></div>
 ```
 
 ## No Repeat
 
 Use `bg-no-repeat` when you don't want to repeat the background image.
 
-```html
+```html rose
 <template preview>
-  <div class="w-full bg-gray-400 h-48 bg-center bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=128&q=80');">
+  <div class="w-full bg-rose-300 h-48 bg-center bg-no-repeat" style="background-image:url('/img/placeholder-light-blue.svg');">
   </div>
 </template>
 
-<div class="bg-no-repeat bg-center ..." style="background-image: url(...)"></div>
+<div class="**bg-no-repeat** bg-center ..." style="background-image: url(...)"></div>
 ```
 
 ## Repeat Horizontally
 
 Use `bg-repeat-x` to repeat the background image only horizontally.
 
-```html
+```html purple
 <template preview>
-  <div class="w-full bg-gray-400 h-48 bg-center bg-repeat-x" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=128&q=80');">
+  <div class="w-full bg-purple-300 h-48 bg-center bg-repeat-x" style="background-image:url('/img/placeholder-light-blue.svg');">
   </div>
 </template>
 
-<div class="bg-repeat-x bg-center ..." style="background-image: url(...)"></div>
+<div class="**bg-repeat-x** bg-center ..." style="background-image: url(...)"></div>
 ```
 
 ## Repeat Vertically
 
 Use `bg-repeat-y` to repeat the background image only vertically.
 
-```html
+```html indigo
 <template preview>
-  <div class="w-full bg-gray-400 h-48 bg-center bg-repeat-y" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=128&q=80');">
+  <div class="w-full bg-indigo-300 h-48 bg-center bg-repeat-y" style="background-image:url('/img/placeholder-light-blue.svg');">
   </div>
 </template>
 
-<div class="bg-repeat-y bg-center ..." style="background-image: url(...)"></div>
+<div class="**bg-repeat-y** bg-center ..." style="background-image: url(...)"></div>
 ```
 
 ## Responsive
