--- a/src/pages/docs/background-color.mdx
+++ b/src/pages/docs/background-color.mdx
@@ -31,16 +31,16 @@ export const classes = {
 
 Control the background color of an element using the `bg-{color}` utilities.
 
-```html lightBlue
+```html emerald
 <template preview>
-  <div class="flex justify-center items-center">
-    <button type="button" class="bg-light-blue-600 text-white font-semibold px-6 py-3 rounded-md">
-      Button
+  <div class="text-center">
+    <button type="button" class="py-2 px-4 bg-emerald-500 text-white font-semibold rounded-lg shadow-md focus:outline-none" tabindex="-1">
+      Click me
     </button>
   </div>
 </template>
 
-<button class="**bg-light-blue-600** ...">Button</button>
+<button class="**bg-green-500** ...">Button</button>
 ```
 
 ### Changing opacity
@@ -79,18 +79,18 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Hover
 
-To control the background color of an element on hover, add the `hover:` prefix to any existing background color utility. For example, use `hover:bg-blue-500` to apply the `bg-blue-500` utility on hover.
+To control the background color of an element on hover, add the `hover:` prefix to any existing background color utility. For example, use `hover:bg-red-700` to apply the `bg-red-700` utility on hover.
 
-```html emerald
+```html rose
 <template preview>
-  <div class="flex justify-center items-center">
-    <button type="button" class="bg-emerald-600 hover:bg-light-blue-600 text-white font-semibold px-6 py-3 rounded-md">
-      Button
+  <div class="text-center">
+    <button type="button" class="py-2 px-4 bg-rose-500 text-white font-semibold rounded-lg shadow-md hover:bg-rose-700 focus:outline-none" tabindex="-1">
+      Click me
     </button>
   </div>
 </template>
 
-<button class="bg-green-600 **hover:bg-light-blue-600** ...">Button</button>
+<button class="bg-red-500 **hover:bg-red-700** ...">Button</button>
 ```
 
 Hover utilities can also be combined with responsive utilities by adding the responsive `{screen}:` prefix *before* the `hover:` prefix.
@@ -110,7 +110,7 @@ To control the background color of an element on focus, add the `focus:` prefix 
   </div>
 </template>
 
-<input class="bg-gray-200 focus:bg-white ...">
+<input class="bg-gray-200 **focus:bg-white** ...">
 ```
 
 Focus utilities can also be combined with responsive utilities by adding the responsive `{screen}:` prefix *before* the `focus:` prefix.
