placehoder lmage stuff

--- a/src/pages/docs/background-attachment.mdx
+++ b/src/pages/docs/background-attachment.mdx
@@ -18,9 +18,9 @@ export const classes = { plugin }
 
 Use `bg-fixed` to fix the background image relative to the viewport.
 
-```html
+```html lightBlue
 <template preview>
-  <div class="w-full h-48 bg-fixed bg-center overflow-y-scroll" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80');">
+  <div class="w-full h-48 bg-fixed bg-cover bg-center overflow-y-scroll" style="background-image:url('/img/placeholder-light-blue.svg');">
     <div class="h-64"></div>
   </div>
 </template>
@@ -32,9 +32,9 @@ Use `bg-fixed` to fix the background image relative to the viewport.
 
 Use `bg-local` to scroll the background image with the container and the viewport.
 
-```html
+```html indigo
 <template preview>
-  <div class="w-full h-48 bg-local bg-center overflow-y-scroll" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80');">
+  <div class="w-full h-48 bg-local bg-cover bg-center overflow-y-scroll" style="background-image:url('/img/placeholder-indigo.svg');">
     <div class="h-64"></div>
   </div>
 </template>
@@ -46,9 +46,9 @@ Use `bg-local` to scroll the background image with the container and the viewpor
 
 Use `bg-scroll` to scroll the background image with the viewport, but not with the container.
 
-```html
+```html fuchsia
 <template preview>
-  <div class="w-full h-48 bg-scroll bg-center overflow-y-scroll" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80');">
+  <div class="w-full h-48 bg-scroll bg-cover bg-center overflow-y-scroll" style="background-image:url('/img/placeholder-fuchsia.svg');">
     <div class="h-64"></div>
   </div>
 </template>
