--- a/src/pages/docs/background-position.mdx
+++ b/src/pages/docs/background-position.mdx
@@ -19,61 +19,61 @@ export const classes = { plugin }
 
 Use the `bg-{side}` utilities to control the position of an element's background image.
 
-```html
+```html lightBlue
 <template preview>
   <div class="flex justify-around mb-8">
     <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.bg-left-top</p>
-      <div class="mx-auto bg-gray-400 w-24 h-24 bg-left-top bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
+      <p class="text-center text-sm text-light-blue-600 font-medium mb-1">.bg-left-top</p>
+      <div class="mx-auto bg-light-blue-300 rounded-md w-24 h-24 bg-left-top bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
     </div>
     <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.bg-top</p>
-      <div class="mx-auto bg-gray-400 w-24 h-24 bg-top bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
+      <p class="text-center text-sm text-light-blue-600 font-medium mb-1">.bg-top</p>
+      <div class="mx-auto bg-light-blue-300 rounded-md w-24 h-24 bg-top bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
     </div>
     <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.bg-right-top</p>
-      <div class="mx-auto bg-gray-400 w-24 h-24 bg-right-top bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
+      <p class="text-center text-sm text-light-blue-600 font-medium mb-1">.bg-right-top</p>
+      <div class="mx-auto bg-light-blue-300 rounded-md w-24 h-24 bg-right-top bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
     </div>
   </div>
   <div class="flex justify-around mb-8">
     <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.bg-left</p>
-      <div class="mx-auto bg-gray-400 w-24 h-24 bg-left bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
+      <p class="text-center text-sm text-light-blue-600 font-medium mb-1">.bg-left</p>
+      <div class="mx-auto bg-light-blue-300 rounded-md w-24 h-24 bg-left bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
     </div>
     <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.bg-center</p>
-      <div class="mx-auto bg-gray-400 w-24 h-24 bg-center bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
+      <p class="text-center text-sm text-light-blue-600 font-medium mb-1">.bg-center</p>
+      <div class="mx-auto bg-light-blue-300 rounded-md w-24 h-24 bg-center bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
     </div>
     <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.bg-right</p>
-      <div class="mx-auto bg-gray-400 w-24 h-24 bg-right bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
+      <p class="text-center text-sm text-light-blue-600 font-medium mb-1">.bg-right</p>
+      <div class="mx-auto bg-light-blue-300 rounded-md w-24 h-24 bg-right bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
     </div>
   </div>
   <div class="flex justify-around">
     <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.bg-left-bottom</p>
-      <div class="mx-auto bg-gray-400 w-24 h-24 bg-left-bottom bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
+      <p class="text-center text-sm text-light-blue-600 font-medium mb-1">.bg-left-bottom</p>
+      <div class="mx-auto bg-light-blue-300 rounded-md w-24 h-24 bg-left-bottom bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
     </div>
     <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.bg-bottom</p>
-      <div class="mx-auto bg-gray-400 w-24 h-24 bg-bottom bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
+      <p class="text-center text-sm text-light-blue-600 font-medium mb-1">.bg-bottom</p>
+      <div class="mx-auto bg-light-blue-300 rounded-md w-24 h-24 bg-bottom bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
     </div>
     <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.bg-right-bottom</p>
-      <div class="mx-auto bg-gray-400 w-24 h-24 bg-right-bottom bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
+      <p class="text-center text-sm text-light-blue-600 font-medium mb-1">.bg-right-bottom</p>
+      <div class="mx-auto bg-light-blue-300 rounded-md w-24 h-24 bg-right-bottom bg-no-repeat" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80');"></div>
     </div>
   </div>
 </template>
 
-<div class="bg-no-repeat bg-left-top bg-gray-400 w-24 h-24" style="background-image: url(...);"></div>
-<div class="bg-no-repeat bg-top bg-gray-400 w-24 h-24" style="background-image: url(...);"></div>
-<div class="bg-no-repeat bg-right-top bg-gray-400 w-24 h-24" style="background-image: url(...);"></div>
-<div class="bg-no-repeat bg-left bg-gray-400 w-24 h-24" style="background-image: url(...);"></div>
-<div class="bg-no-repeat bg-center bg-gray-400 w-24 h-24" style="background-image: url(...);"></div>
-<div class="bg-no-repeat bg-right bg-gray-400 w-24 h-24" style="background-image: url(...);"></div>
-<div class="bg-no-repeat bg-left-bottom bg-gray-400 w-24 h-24" style="background-image: url(...);"></div>
-<div class="bg-no-repeat bg-bottom bg-gray-400 w-24 h-24" style="background-image: url(...);"></div>
-<div class="bg-no-repeat bg-right-bottom bg-gray-400 w-24 h-24" style="background-image: url(...);"></div>
+<div class="bg-no-repeat **bg-left-top** ..." style="background-image: url(...);"></div>
+<div class="bg-no-repeat **bg-top** ..." style="background-image: url(...);"></div>
+<div class="bg-no-repeat **bg-right-top** ..." style="background-image: url(...);"></div>
+<div class="bg-no-repeat **bg-left** ..." style="background-image: url(...);"></div>
+<div class="bg-no-repeat **bg-center** ..." style="background-image: url(...);"></div>
+<div class="bg-no-repeat **bg-right** ..." style="background-image: url(...);"></div>
+<div class="bg-no-repeat **bg-left-bottom** ..." style="background-image: url(...);"></div>
+<div class="bg-no-repeat **bg-bottom** ..." style="background-image: url(...);"></div>
+<div class="bg-no-repeat **bg-right-bottom** ..." style="background-image: url(...);"></div>
 ```
 
 ## Responsive
