--- a/src/pages/docs/background-repeat.mdx
+++ b/src/pages/docs/background-repeat.mdx
@@ -20,11 +20,11 @@ Use `bg-repeat` to repeat the background image both vertically and horizontally.
 
 ```html fuchsia
 <template preview>
-  <div class="w-full bg-fuchsia-300 h-48 bg-center bg-repeat" style="background-image:url('/img/placeholder-light-blue.svg');">
+  <div class="w-full bg-fuchsia-300 h-48 bg-repeat" style="background-image:url('/img/placeholder-fuchsia.svg');">
   </div>
 </template>
 
-<div class="**bg-repeat** bg-center ..." style="background-image: url(...)"></div>
+<div class="**bg-repeat** ..." style="background-image: url(...)"></div>
 ```
 
 ## No Repeat
@@ -33,7 +33,7 @@ Use `bg-no-repeat` when you don't want to repeat the background image.
 
 ```html rose
 <template preview>
-  <div class="w-full bg-rose-300 h-48 bg-center bg-no-repeat" style="background-image:url('/img/placeholder-light-blue.svg');">
+  <div class="w-full bg-rose-200 h-48 bg-center bg-no-repeat" style="background-image:url('/img/placeholder-rose.svg');">
   </div>
 </template>
 
@@ -46,7 +46,7 @@ Use `bg-repeat-x` to repeat the background image only horizontally.
 
 ```html purple
 <template preview>
-  <div class="w-full bg-purple-300 h-48 bg-center bg-repeat-x" style="background-image:url('/img/placeholder-light-blue.svg');">
+  <div class="w-full bg-purple-300 h-48 bg-center bg-repeat-x" style="background-image:url('/img/placeholder-purple.svg');">
   </div>
 </template>
 
@@ -59,7 +59,7 @@ Use `bg-repeat-y` to repeat the background image only vertically.
 
 ```html indigo
 <template preview>
-  <div class="w-full bg-indigo-300 h-48 bg-center bg-repeat-y" style="background-image:url('/img/placeholder-light-blue.svg');">
+  <div class="w-full bg-indigo-200 h-48 bg-center bg-repeat-y" style="background-image:url('/img/placeholder-indigo.svg');">
   </div>
 </template>
 
