--- a/src/pages/docs/background-size.mdx
+++ b/src/pages/docs/background-size.mdx
@@ -18,22 +18,22 @@ export const classes = { plugin }
 
 Use `bg-auto` to display the background image at its default size.
 
-```html
+```html amber
 <template preview>
-  <div class="w-full bg-gray-400 h-48 bg-center bg-auto" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80');">
+  <div class="w-full bg-amber-200 h-48 bg-center bg-auto" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80');">
   </div>
 </template>
 
-<div class="bg-auto bg-center ..." style="background-image: url(...)"></div>
+<div class="**bg-auto** bg-center ..." style="background-image: url(...)"></div>
 ```
 
 ## Cover
 
 Use `bg-cover` to scale the background image until it fills the background layer.
 
-```html
+```html emerald
 <template preview>
-  <div class="w-full mx-auto bg-gray-400 h-48 bg-center bg-cover" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80');">
+  <div class="w-full mx-auto bg-emerald-200 h-48 bg-center bg-cover" style="background-image:url('/img/placeholder-emerald.svg');">
   </div>
 </template>
 
@@ -44,9 +44,9 @@ Use `bg-cover` to scale the background image until it fills the background layer
 
 Use `bg-contain` to scale the background image to the outer edges without cropping or stretching.
 
-```html
+```html indigo
 <template preview>
-  <div class="w-full bg-gray-400 h-48 bg-center bg-no-repeat bg-contain" style="background-image:url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80');">
+  <div class="w-full bg-indigo-300 h-48 bg-center bg-no-repeat bg-contain" style="background-image:url('/img/placeholder-indigo.svg');">
   </div>
 </template>
 
